update config app